2001-11-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Tagged 2.2a2 =============================================

2001-11-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tea/configure.in: Look for 8.4 and 8.3 tclsh's too.

	* generic/bufStubLib.c (Buf_InitStubs): Using MC_UNCONSTB84.

	* generic/bufIntDecls.h (GT84): New macro. Detects 8.4 and beyond.
	  (MC_UNCONSTB84): New macro. Explanations in the sources.

2001-11-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tea/Makefile.in (install-doc): Added invokations of `basename`
	  to keep absolute paths to the source out of the destination for
	  the copy operation.

2001-11-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tea/configure.in:
	* tea/Makefile.in: Changed to expect the toplevel directory as
	  source directory.

2001-11-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tea/Makefile.in (install-libraries): Removed code trying to
	  install header files. We have no public headers to install. Yet.

	* htdocs/raw/index.exp: Removed reference to the old site.

	* PREPARE: Added code to move the TEA makefiles to their correct
	  location in the source distribution. This code also eliminates
	  the 'tea' subdirectory to avoid confusion.

	* README.install: Added compilation instructions.

2001-09-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htdocs/raw/mem_event.exp: New page for the website containing
	  thoughts about generation of file events for memory
	  channels. References the new documentation about the
	  interactions in the Tcl core between I/O system and notifier.

	* tools/rules/memchan: Added declaration of additional
	  documentation page about event generation.

	* tools/rules/references: Added reference to Tcl documentation
	  about the interaction between the components of the Tcl I/O
	  system and the components of the Tcl notifier.

	* ChangeLog.short: Updated contents a bit.
