@@ -1,3 +1,9 @@
+2002-03-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* generic/memchan.c (Seek):      Added WideInt support (TIP 82).
+	* generic/memchan.c (Output):    CONSTified API (TIP 27)
+	* generic/memchan.c (GetOption): CONSTified API (TIP 27).
+
 2001-11-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* Tagged 2.2a2 =============================================
